=head1 Pod::2::DocBook

    * 0.02 Thu  3 Jul 2008
        - now using Module::Build instead of ExtUtils::MakeMaker
        - moved NAME, SYNOPSIS, DESCRIPTION on top of DocBook.pm
        - added METHODS POD
        - added 00-compile.t, distribution.t, pod-coverage.t, pod-spell.t,
          pod.t, signature.t

    * 0.01 Tue 10 Jun 2008
        - Applied patches for =for blocks from Perl Training Australia's
          Pod::DocBook repository. (pjf)
        - Updated t/Pod-2-Docbook.t for more streamlined testing. (pjf)
        - Corrected POD errors in Changes file. (pjf)
        - xml validity fix, full DOCTYPE (yanick)

=back

=head1 OLD Pod::DocBook

=head1 v1.2

=over

=item Fri 6 Jun 2008

Renamed module to Pod::2::DocBook 0.01

=item Tue 16 Mar 2004

Released Pod::DocBook 1.2

Added missing test files

=back

=head1 v1.1

=over

=item Tue 16 Mar 2004

Released Pod::DocBook 1.1

=item Wed 3 Mar 2004

F<README> is now pod format (seemed appropriate)

=item Tue 2 Mar 2004

F<Changes> is now pod format (seemed appropriate)

fixed doc: C<=item *> yields C<< <itemizedlist> >>, not
C<< <simplelist> >>

fixed bug in C<< <orderedlist> >> output

now uses MD5 hashes for fixed-length IDs (thanks to Jacques Supcik)

added B<--no-header> option to B<pod2docbook> (thanks to Jacques
Supcik)

=item Thu 26 Feb 2004

fixed bug with blank lines in C<=begin docbook> ... C<=end docbook>
regions (thanks to Garry Williams)

=back

=head1 v1.0

=over

=item Thu 19 Feb 2004

released Pod::DocBook 1.0

=item Tue 30 Dec 2003

started rewrite of Pod::DocBook

specialize Pod::Parser instead of parsing directly

emit formatted DocBook 4.2 SGML

=back

=head1  OLD -- Pod::DocBook 0.6 and earlier

  0.0.6
  =====

      o Support for L<> style linking, includes new Id naming scheme

      o additional styles, variable headx->secty mapping

      o removed unneccessary <para></para> pairs

      o fixed index building (but don't use this)

      o general de-HTML-ization

  0.0.5
  =====
