@@ -1,6 +1,6 @@
 ---
 name: Pod-2-DocBook
-version: 0.02_01
+version: 0.02_02
 author:
   - 'Jozef Kutej <jkutej@cpan.org>'
 abstract: Convert Pod data to DocBook SGML
@@ -9,6 +9,7 @@ resources:
   license: http://dev.perl.org/licenses/
 requires:
   Digest::MD5: 0
+  List::MoreUtils: 0
   Pod::ParseLink: 0
   Pod::Parser: 0
   Text::ParseWords: 0
@@ -19,7 +20,7 @@ build_requires:
 provides:
   Pod::2::DocBook:
     file: lib/Pod/2/DocBook.pm
-    version: 0.02_01
+    version: 0.02_02
 generated_by: Module::Build version 0.280801
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
