@@ -2,11 +2,14 @@ NAME
     Pod::2::DocBook - Convert Pod data to DocBook SGML
 
 SYNOPSIS
-      use Pod::2::DocBook;
-      my $parser = Pod::2::DocBook->new (title             => 'My Article',
-                                         doctype           => 'article',
-                      fix_double_quotes => 1,
-                      spaces            => 3);
+        use Pod::2::DocBook;
+        my $parser = Pod::2::DocBook->new(
+            title             => 'My Article',
+            doctype           => 'article',
+            base_id           => 'article42'
+            fix_double_quotes => 1,
+            spaces            => 3
+        );
 
       $parser->parse_from_file ('my_article.pod', 'my_article.sgml');
 
