@@ -14,12 +14,12 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 816599fdad826d49bce3e0f862d22cd14189d7b2 Build.PL
-SHA1 fdfc40bcf7b7afc9a62a5b2b015eddbe867c797a Changes
-SHA1 3eb2ca8cd2397351702c1eb1e430b6a99954c8d2 MANIFEST
-SHA1 4110ebd7bd636b522f62a25de17bf2fb105056ed META.yml
-SHA1 13b14be990cd3f194c9f1cfd20009ea76d0ed018 Makefile.PL
-SHA1 216ab3b8c5dd9b8a05551a6d6669d8c138d79c22 README
+SHA1 8ba43b3bd08b43dee6f623b8cee92beec5acf8ff Build.PL
+SHA1 3b3e7ed49f9c4ad9c47d1cca241c89a3def86800 Changes
+SHA1 da6ee51356be7aa49038c3d6cdc23849fef2f548 MANIFEST
+SHA1 443bca9ec25a773df87c8b31acd50686819b86dc META.yml
+SHA1 276966d086e4246afe586486d01a8e4fc9a756f7 Makefile.PL
+SHA1 6d00d36c84f8e69a5b9d4f0e6367aac51b817162 README
 SHA1 67f2e4b37762f178008ed5379fce24ca449037ab doc/Pod-2-DocBook.html
 SHA1 212c6952540af848f50cb889ed454e7a1bf2d9cd doc/Pod-2-DocBook.pdf
 SHA1 a7661645db2095e29ebde300886b1a2ae87e325b doc/docbook.css
@@ -45,8 +45,8 @@ SHA1 669364718285082670bf1e16347bd717f5934c2f examples/pod2docbook-docbook/image
 SHA1 fa61be8935532c4b2b37d3d3e18e69f5c0c69cad examples/pod2docbook-docbook/images/warning.png
 SHA1 1b53e4cd84ede8267477cee6168efce3fef5c8b8 examples/pod2docbook-docbook/images/warning.svg
 SHA1 ea1fab12c887b8edd139b793fe9b26307331f7eb examples/pod2docbook-docbook/xinclude.mod
-SHA1 c67213f7651ff71198fce9a9226409e8271c1622 lib/Pod/2/DocBook.pm
-SHA1 907624503872082dc8356880a44a5153d2969834 pod2docbook
+SHA1 6f05df843cd1d6ebaf61d1b19eea00be234ad3ee lib/Pod/2/DocBook.pm
+SHA1 bd003d2a6692a727505ffe92264a0a76c2a6a2ce pod2docbook
 SHA1 605f05a5336cc37a476bb10b218f5ad1a2bd340d t/00-compile.t
 SHA1 9994be45692ea5aea758c86d35fa0efbc4abb0c7 t/Pod-2-DocBook.t
 SHA1 41533fbd463e42d2ecf1e119eca910c16809d13e t/distribution.t
@@ -73,17 +73,21 @@ SHA1 fe33264bfae9a8c4d44fbd775ef47ee984fce504 t/e_unknown_fc.sgml
 SHA1 2405c4385dc40c2e78dfa56cd11ae831dfc72455 t/for.pod
 SHA1 187aeb468148380abf737c1dee07219b95246bf5 t/for.sgml
 SHA1 09995acec1da0d303828ccf75c40f27a8a0f1e66 t/formatting_codes.pod
-SHA1 1b3954512a6f66242da31de0759e12e6269f371e t/formatting_codes.sgml
+SHA1 ed489bc355f0177f29604251203d1dd754fec36e t/formatting_codes.sgml
 SHA1 afa5905849a068df900e1a5c230604d51a998669 t/head.pod
-SHA1 80fb04d1f42a56f81229921ebdb4fa119213f5d7 t/head.sgml
+SHA1 af8e6dd3ff6788ea9ac7a48d51e6205c59d0fd18 t/head.sgml
 SHA1 d8680657894d4ea7929a8360ad66a44a5d70f36e t/indent.pod
 SHA1 39155475daba7a19c9e8b89c8271a7928063d2f9 t/indent.sgml
 SHA1 8e448d60d31c172bc5246c90625400583651f079 t/lists.pod
-SHA1 8944d2d05f44d37055604fe4e7ac4f138cb09234 t/lists.sgml
+SHA1 09fa1d3242fa2bfe4aa7e9ac6e0ea08c25fc3dfe t/lists.sgml
+SHA1 d8622106dce894fc17f9e1892e5b603b295bb2e7 t/make_id.t
 SHA1 ec7be9548d281ed0686799a7c2fec4bbb25ade31 t/no_header.pod
 SHA1 bbb10371232f5469c5dfffb9c3c3000309e81e4a t/no_header.sgml
 SHA1 ec7be9548d281ed0686799a7c2fec4bbb25ade31 t/paragraphs.pod
 SHA1 1ec0eb7c6ae53287c2acb684d72be8524f29cbf8 t/paragraphs.sgml
+SHA1 491d4b09cb94c1e722f7437445a1b5353c52e07c t/perlcritic.t
+SHA1 30f1b5d0736ba4529fd99475e2807fdb033a3c61 t/perlcriticrc
+SHA1 c26c5d4531effe5859ca35271645bfec5db7ff5c t/perltidy.conf
 SHA1 0b1c5a2d59be6bfa7d60c64cd964fea6a0331705 t/pod-coverage.t
 SHA1 469afd9049b94527619a02194b0ccde0824f6c0a t/pod-spell.t
 SHA1 640935336dc1123c0069bcf5432bcaedc2cf22d3 t/pod.t
@@ -93,9 +97,9 @@ SHA1 8a09a3cf846e5209a7c0c13a3b30782c5ede809f t/table.pod
 SHA1 48a29a3e57b385969120253af3318c03541fe787 t/table.sgml
 SHA1 0991a2f92c844fea6528d30c5a09d985fb9d9fbb t/valid_xml.t
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.6 (GNU/Linux)
+Version: GnuPG v1.4.9 (GNU/Linux)
 
-iD8DBQFIcRFFuzJBASXpqvsRAkrPAKCRxuW1CDoFpv3TSVCHjFyM2Ol3TgCcCOFg
-P5moCo1UtK7H3AI+yEwZBJ0=
-=Q+Sd
+iEYEARECAAYFAkjc7qgACgkQC0OgUPgL2Sd96ACgpwqQfxTwS8GyLbmaVXbWjyLm
+R6IAniy2/+oxszliuVu5DmWh0cuUWh19
+=nKtb
 -----END PGP SIGNATURE-----
