@@ -2,12 +2,12 @@
         PUBLIC "-//OASIS//DTD DocBook V4.2//EN" 
                "http://www.oasis-open.org/docbook/xml/4.2/docbookx.dtd" >
 <!--
-     Generated by Pod::DocBook v1.0, using:
-       Digest::MD5 v2.30
-       Pod::Parser v1.13
+     Generated by Pod::2::DocBook v0.02_01, using:
+       Digest::MD5 v2.36
+       Pod::Parser v1.35
        Pod::ParseLink v1.06
-       Text::ParseWords v3.21
-       Text::Wrap v2001.09291
+       Text::ParseWords v3.24
+       Text::Wrap v2005.082401
 -->
 <section><title>formatting_codes.pod</title>
   <para>
@@ -37,7 +37,7 @@
   </para>
   <para>
     <link
-    linkend="ID-d9a4b0f5b614b7a3753431b37bcd1007"><quote>sec</quote></link>
+    linkend="ID-e2909816a0d15fe2111962557aaa89b2"><quote>sec</quote></link>
   </para>
   <para>
     text
@@ -47,7 +47,7 @@
   </para>
   <para>
     <link
-    linkend="ID-d9a4b0f5b614b7a3753431b37bcd1007"><quote>text</quote></link>
+    linkend="ID-ad783ccf59d1f2b37335e66f88fd8c3f"><quote>text</quote></link>
   </para>
   <para>
     <ulink url="scheme:...">scheme:...</ulink>
