@@ -2,50 +2,50 @@
         PUBLIC "-//OASIS//DTD DocBook V4.2//EN" 
                "http://www.oasis-open.org/docbook/xml/4.2/docbookx.dtd" >
 <!--
-     Generated by Pod::DocBook v1.0, using:
-       Digest::MD5 v2.30
-       Pod::Parser v1.13
+     Generated by Pod::2::DocBook v0.02_01, using:
+       Digest::MD5 v2.36
+       Pod::Parser v1.35
        Pod::ParseLink v1.06
-       Text::ParseWords v3.21
-       Text::Wrap v2001.09291
+       Text::ParseWords v3.24
+       Text::Wrap v2005.082401
 -->
 <section><title>head.pod</title>
-  <section id="ID-ee9cbd299beb10a43d33acc63f419492"><title>1</title>
+  <section id="ID-487ae0e8e6aa6eac8927c1568a377d50"><title>1</title>
     <para>
       Contents of section 1
     </para>
-    <section id="ID-6841d264cd13513aa595818203255bb9"><title>1.1</title>
+    <section id="ID-33cf93e0bbd782f6a6151c5def0b5595"><title>1.1</title>
       <para>
 	Contents of section 1.1
       </para>
-      <section id="ID-025e5c7516b75f5d48202b0eed4dc2cd"><title>1.1.1</title>
-        <section id="ID-5ceb73a7ee32beb84fd4ba0d619f93f8"><title>1.1.1.1</title>
+      <section id="ID-1fa707167eaafc4f685f59b4a7eb299e"><title>1.1.1</title>
+        <section id="ID-3bb4b835d70bda597e6b0ea0dd63fc6b"><title>1.1.1.1</title>
           <para></para>
         </section>
       </section>
     </section>
   </section>
-  <section id="ID-2da2c727cb41c9d0cb21b82dcf74f987"><title>2</title>
+  <section id="ID-d2bfae1d1b4fcd55131b1be112f165c9"><title>2</title>
     <para>
       Contents of section 2
     </para>
-    <section id="ID-4eed09d51e81099233752a6da06f7d92"><title>2.1</title>
+    <section id="ID-2382835fcfa66c6ed2c8cd5518383bbd"><title>2.1</title>
       <para>
 	Contents of section 2.1
       </para>
-      <section id="ID-1639bfc059e8567ba51bf5bf55e08f41"><title>2.1.1</title>
+      <section id="ID-ea4da8c7c468f86d2164ceab9d359fb9"><title>2.1.1</title>
         <para>
 	  Contents of section 2.1.1
         </para>
       </section>
-      <section id="ID-b5f2b3bd261273ef5979237a52827157"><title>2.2</title>
+      <section id="ID-dbaa5529c77d41e10f038349b6bbfe1e"><title>2.2</title>
         <para>
 	  Contents of section 2.2
         </para>
       </section>
     </section>
   </section>
-  <section id="ID-1044a8d489c6f5c15fd85f40a0aa302e"><title>3</title>
+  <section id="ID-dbf4a4ef4604ab13e2087f0aa6ab228b"><title>3</title>
     <para>
       Contents of section 3
     </para>
