@@ -2,12 +2,12 @@
         PUBLIC "-//OASIS//DTD DocBook V4.2//EN" 
                "http://www.oasis-open.org/docbook/xml/4.2/docbookx.dtd" >
 <!--
-     Generated by Pod::DocBook v1.0, using:
-       Digest::MD5 v2.30
-       Pod::Parser v1.13
+     Generated by Pod::2::DocBook v0.02_01, using:
+       Digest::MD5 v2.36
+       Pod::Parser v1.35
        Pod::ParseLink v1.06
-       Text::ParseWords v3.21
-       Text::Wrap v2001.09291
+       Text::ParseWords v3.24
+       Text::Wrap v2005.082401
 -->
 <section><title>lists.pod</title>
   <para>
@@ -211,7 +211,7 @@
   <para>
     <variablelist>
       <varlistentry>
-        <term><anchor id="ID-a61de90e17f3ca27a8b2c684ec6a4b1b" />The first</term>
+        <term><anchor id="ID-4d88194680ea9fb54f0ff7f3a3041474" />The first</term>
         <listitem>
           <para>
 	    First item
@@ -219,7 +219,7 @@
         </listitem>
       </varlistentry>
       <varlistentry>
-        <term><anchor id="ID-2071304e425793061d74c30cb8f74ee7" />The second</term>
+        <term><anchor id="ID-329f452c732355c3ee1b46dccad30851" />The second</term>
         <listitem>
           <para>
 	    Second item
@@ -227,7 +227,7 @@
           <para>
             <variablelist>
               <varlistentry>
-                <term><anchor id="ID-4d44e612ab9905959a860d365fefad77" />The first under the second</term>
+                <term><anchor id="ID-fc6d03982e718e8b4d109d380251bbff" />The first under the second</term>
                 <listitem>
                   <para>
 		    First sub-item under the second item
@@ -235,7 +235,7 @@
                 </listitem>
               </varlistentry>
               <varlistentry>
-                <term><anchor id="ID-5dcacfa5957119b857c926323e689265" />The second under the second</term>
+                <term><anchor id="ID-fc2b02b5af154d0d72e9c5c725dd905f" />The second under the second</term>
                 <listitem>
                   <para>
 		    Second sub-item under the second item
@@ -247,7 +247,7 @@
         </listitem>
       </varlistentry>
       <varlistentry>
-        <term><anchor id="ID-e45b4fe2757e47c070f5b67c4bd426df" />The third</term>
+        <term><anchor id="ID-24ca204b0c539dd58369eb62f4717fb6" />The third</term>
         <listitem>
           <para>
 	    Third item
